<resources>
    <string name="main_basic">기초 1:1 PT</string>
    <string name="main_theme">테마 1:1 PT</string>
    <string name="seep_minute">분</string>
    <string name="seep_Times">회</string>
    <string name="call">전화 알림</string>
    <string name="messages">메시지 알림</string>
    <string name="app_name">iBODY24</string>
    <string name="permission_contacts_rationale">permissions are needed to demonstrate access.</string>
    <string name="permision_available_contacts">Permissions have been granted.</string>
    <string name="permissions_not_granted">Permissions were not granted.</string>
    <string name="ok">확인</string>
    <string name="cancel">취소</string>
    <string name="register_user">가입완료</string>
    <string name="register_complete">iBODY24에 가입 되셨습니다.</string>
    <string name="error_bluetooth">블루투스 장치를 허용하지 않아 종료합니다.</string>
    <string name="error_permission">필요한 권한을 허용하지 않아 종료됩니다.</string>
    <string name="network_error">네트워크에 연결되어 있지 않습니다.</string>
    <string name="agree_term">약관에 동의 해주세요.</string>
    <string name="enter_email">이메일을 입력 해주세요.</string>
    <string name="enter_pass">패스워드를 입력 해주세요.</string>
    <string name="enter_pass_confirm">패스워드 확인을 입력 해주세요.</string>
    <string name="email_not_valid">잘못된 이메일 입니다. 올바른 이메일로 다시 입력해 주세요.</string>
    <string name="pass_not_valid">패스워드는 영문 숫자 혼합 8~16자리로 설정 하여야 합니다.</string>
    <string name="pass_not_match">비밀번호와 비밀번호 확인이 다릅니다.</string>
    <string name="error_program">예상치 못한 오류입니다.</string>
    <string name="error_exists_email">이미 등록된 이메일 주소입니다.</string>
    <string name="error_not_account">이메일 주소 또는 비밀번호가 일치하지 않습니다.\n다시 한번 확인하여 주시기 바랍니다.</string>
    <string name="find_id">아이디/비밀번호 찾기</string>
    <string name="select_device_title">iBODY24 %s 기기를 선택해주세요.</string>
    <string name="find_device">+ 기기검색하기</string>
    <string name="support_title">iBODY24를 찾지 못하셨나요?\n아래 항목을 확인하여 주세요.</string>
    <string name="support_msg1">iBODY24 제품의 전원이 제대로 켜져 있는지\n확인하여 주세요.</string>
    <string name="support_msg2">스마트폰의 블루투스 기능을 활성화 시켜주세요.</string>
    <string name="support_msg3">iBODY24 제품을 스마트폰과 가까운 곳에 놓고\n실행하여 주세요.</string>
    <string name="BMI_below">표준이하</string>
    <string name="BMI_standard">표준</string>
    <string name="BMI_above">표준이상</string>
    <string name="menu_home">Home</string>
    <string name="menu_chart">Chart</string>
    <string name="menu_coach">My Coach</string>
    <string name="menu_setting">Setting</string>
    <string name="coach_basic_title_001">준비 운동</string>
    <string name="coach_basic_title_002">15분 전신 운동</string>
    <string name="coach_basic_title_003">매트 운동</string>
    <string name="coach_basic_title_004">액티브 운동</string>
    <string name="accuracy">정확도</string>
    <string name="exercise_number">운동\n횟수</string>
    <string name="consume_calorie">소모\n칼로리</string>
    <string name="maximum_heartrate">심박수</string>
    <string name="total_point">Total Point</string>
    <string name="support_ibody">iBODY24가 제공하는 무료 운동입니다.\n운동 전 꼭 5분 이상 준비운동을\n실시하여 주시기 바랍니다.</string>
    <string name="prepare_exercise_comment">iBODY24가 추천하는 준비운동 입니다.\n운동에 있어서 준비운동은 매우 중요합니다.\n반드시 5분 이상 실시하여 주세요.\n준비운동은 부상을 방지 할 수 있습니다.\n각 영상을 클릭하시면 준비운동이 시작됩니다.</string>
    <string name="support_ibody2">iBODY24가 제공하는 전문 피트니스 운동입니다.\n시간과 장소에 제약 없이 트레이너와\n1대1 영상  트레이닝이 가능합니다.</string>
    <string name="personal_information">개인정보 취급</string>
    <string name="weight_setting">몸무게 설정</string>
    <string name="now_weight">현재 몸무게</string>
    <string name="target_weight">목표 몸무게</string>
    <string name="diet_period">감량 기간</string>
    <string name="week">주</string>
    <string name="day_consume_calorie">일일 소비칼로리</string>
    <string name="setting">설정</string>
    <string name="speciality_field">전문분야</string>
    <string name="trainer_title_1">트레이너</string>
    <string name="trainer_title_3">이글쉽팀 레이디즈</string>
    <string name="watch_exercise">운동 보기</string>
    <string name="fitness">피트니스</string>
    <string name="trainer_name_1">이주영</string>
    <string name="input_name">이름을 입력해 주세요.</string>
    <string name="input_birth">생년월일을 입력해 주세요.</string>
    <string name="month">월</string>
    <string name="input_gender">성별을 입력해 주세요.</string>
    <string name="input_height">신장을 입력해 주세요.</string>
    <string name="count">횟수</string>
    <string name="yes">예</string>
    <string name="no">아니오</string>
    <string name="program_001_001">초고속 복근 완성 필라테스</string>
    <string name="over_work">무리</string>
    <string name="fit">적당</string>
    <string name="enough">충분</string>
    <string name="comment_accuracy">운동 자세에 대한 정확도입니다. 정확도가 높을수록 운동 중 올바른 자세를 취했다고 판단되며, 칼로리 소비량도 늘어난다고 볼 수 있습니다.</string>
    <string name="comment_exercise_number">얼마만큼 운동 횟수를 성공시켰는지를 %로 나타냅니다. 횟수가 높아질수록 운동 정확도와 체력이 증진되고 있다고 판단합니다.</string>
    <string name="comment_consume_calorie">목표 소비 칼로리 대비 오늘 소비한 칼로리양을 나타냅니다. 목표 칼로리 수치에 도달하거나 넘어설 경우 체중감량 및 운동 성실도가 좋다고 판단합니다.</string>
    <string name="comment_total_point">그래프에서 나타내는 각 수치들을 평균으로 점수화하여 나타냅니다. 점수가 높을수록 신체 건강과 운동신경이 좋다고 판단합니다.</string>
    <string name="whole_body_comment">iBODY24가 제공하는 전신 &lt;font color = "RED"&gt; 초급 &lt;/font&gt; 운동입니다. &lt;br /&gt; 10가지 동작을  2세트 반복합니다. &lt;br /&gt; 다치지 않게 개인 신체능력 범위 내에서 실시하여주세요!</string>
    <string name="mat_exercise_comment">Core를 자극하는 밸런스 중심의 &lt;font color="RED"&gt;초급&lt;/font&gt; 운동입니다.&lt;br /&gt;운동 실행 시 트레이너와 동일한 속도로 실행하여 주시면 운동효과가 더 상승됩니다!</string>
    <string name="active_exercise_comment">활동적인 움직임으로 심박수를 상승시키는 지구력 상승과 근력 증가에 좋은 &lt;font color="RED"&gt;고급&lt;/font&gt; 운동입니다.&lt;br /&gt;빠른 지방 연소에 많은 도움이 되며 체중감량에 탁월합니다.</string>
    <string name="program_comment_001_001">이주영의 복근 운동은 PRO 레벨의 운동으로써, 복근 운동 위주로 전체적인 코어도 같이 발달 시킬 수 있는 프로그램입니다. 남녀 구분 없이 모두 따라 할 수 있어 남성은 Six pack, 여성은 11자 복근을 만들기에 매우 효율적인 프로그램입니다. 정확한 자세가 중요하므로 트레이너의 올바른 자세를 정확히 따라하여 주세요.</string>
    <string name="program_001_002">완벽 뒤태 만들기 필라테스</string>
    <string name="program_comment_001_002">이주영의 힙업 운동은 PRO 레벨의 운동으로써, 둔근과 척추 기립근 발달에 매우 좋은 운동입니다. 힙 운동은 시각적인 부분의 향상뿐만 아니라 전체적인 신체 밸런스에 많은 도움을 줍니다. 정확하지 않은 자세로 운동 시 바디 밸런스가 불균형 해질 수 있음으로 정확하게 따라해 주시기 바랍니다.</string>
    <string name="program_002_001">Total Body Training 1</string>
    <string name="program_002_002">Total Body Training 2</string>
    <string name="program_comment_002_001">Total Body Training 1 은 전신을 모두 사용하는 아마추어&#40;&lt;font color="RED"&gt;초급&lt;/font&gt;&#41; 운동으로서, 성별에 상관없이 전체 근육 증가뿐만 아니라 지방 연소에도 많은 도움이 됩니다. 트레이너의 올바른 자세 설명을 정확하게 듣고 따라 하여 주세요!</string>
    <string name="program_comment_002_002">Total Body Training 2는 PRO&#40;&lt;font color="RED"&gt;고급&lt;/font&gt;&#41; 운동으로서, TBT 1 보다 높은 난이도로 설정 되어 있습니다. 복부 와 허벅지 지방 연소를 도와주며 전신 근육 증가에 좋은 운동입니다. 트레이너의 올바른 자세 설명을 정확하게 듣고 따라 하여 주세요!</string>
    <string name="trainer_spec_1">필라테스</string>
    <string name="trainer_spec_2">머슬</string>
    <string name="trainer_name_2">홍두한</string>
    <string name="trainer_comment_1">필라테스는 스트레칭과 근력운동이 함께 되어 매끈하고 탄력 있는 몸매를 가꿔줄 뿐만 아니라, 잘 사용하지 않는 속 근육과 몸의 중심인 파워하우스를 단련하여 일상적인 생활에서 잘못된 자세로 삐뚤어진 척추와 골반을 바로잡아줍니다. 저와 함께 필라테스를 Go Go Go! 복부, 엉덩이, 허벅지”의 탄력 있는 몸매 라인! 뒤태 미녀!로 아름답고 당당한 몸매를 만들어 보아요</string>
    <string name="trainer_career_1">- 한국체육대학교 사회체육대학원 생활체육학과 석사학위 \n- Line Dance Director Certification \n- University of Nevada, D.K Body Balancing pilates \n   (Mat work) international Certification \n- University of Nevada, D.K Body Balancing pilates \n (Equipment) international Certification \n- 영국 황실 무용 ISTD Dance Sports international Director \n- 필라테스 지도자 과정 instructor \n- 다수 연예인 필라테스 지도(소유진 ,김정은, 서인영 등..) \n- 2015 머슬매니아 스포츠 모델 4위 \n- 2015 나바 wff 스포츠 모델 top10 \n- 2015 나바 wff 비키니 top10</string>
    <string name="trainer_comment_2">안녕하세요 코리홍 홍두한 트레이너입니다. 올바른 운동으로 건강을 얻게 되지만, 잘못된 운동으로 부상을 입게 됩니다. TBT 프로그램은은 100세까지 건강하게 살 수 있는 해결방안입니다. 또한 기능개선과 근력 및 근지구력 향상과 다이어트에 초점을 맞춘 프로그램입니다. 그 동안 잘못된 피트니스 운동에서 벗어나 과학을 기초로 둔 올바른 운동을 하시길 바랍니다.</string>
    <string name="trainer_career_2">- 생활체육지도자3급 (보디빌딩) \n- 한국인재교육원 운동처방사 과정 교육 수료 \n- KINESY-THERAPY SPECIALIST Level 1 자격 취득 \n- TEAM AVERNGERS ACADAMY 퍼스널 트레이너 \n &#160; 자격 취득\n- 고객 관리 지도자 1급 / 레크레이션 지도자 1급 \n- 전) 한방충전 10minutes 촬영 \n- 전) 경남시체육회 전국체전 박정수 선수 컨디셔닝 트레이너 \n- 현) LG TWINS 채은성 선수 피지컬 트레이너 \n- 현) 바디채널 상동점 Supervisor \n- 2013 안양시 보디빌딩 협회 회장배 -75kg 입상 \n- 2014 WFF UNIVERSE FITNESS 입상 \n- 2015 경기도민체전 -80kg 입상</string>
    <string name="male">남성</string>
    <string name="female">여성</string>
    <string name="please_all_information">모든 정보를 입력하여 주세요</string>
    <string name="select_gender">성별 선택</string>
    <string name="height_input">신장 입력</string>
    <string name="weight_input">몸무게 입력</string>
    <string name="not_connect_band">밴드와 연결이 되지 않았습니다.</string>
    <string name="not_prepare_video">운동용 비디오 파일이 준비되지 않았습니다.</string>
    <string name="not_prepare_wifi">통신망 혹은 Wi-fi가 연결 되어 있지 않습니다. 연결 후 다시 실행하여주시기 바랍니다.</string>
    <string name="setting_menu1">iBODY24 %s 용어사전</string>
    <string name="setting_menu2">iBODY24 %s 사용법</string>
    <string name="setting_menu4">공지사항 및 이벤트</string>
    <string name="confirm_logout">로그아웃 하시겠습니까?</string>
    <string name="confirm_back_close">뒤로 버튼을 한번 더 누르시면 종료됩니다</string>
    <string name="BMI_WHO">&lt;font color="#777777"&gt;WHO BMI 공식에 따르면 당신의 키를 기준으로한  적정 몸무게는&lt;/font&gt; &lt;font color="#45c383"&gt;%1$d ~ %2$d kg&lt;/font&gt; &lt;font color="#777777"&gt;입니다.&lt;/font&gt;</string>
    <string name="chart_title_accuracy">정확도</string>
    <string name="chart_title_exercise_number">운동횟수</string>
    <string name="chart_title_maximum_heartrate">심박수</string>
    <string name="chart_title_consume_calorie">소모칼로리</string>
    <string name="caution_diet_period">다이어트 기간은 0보다 커야합니다.</string>
    <string name="caution_weight">목표 몸무게는 현재 몸무게보다 낮게 설정하여 주세요.</string>
    <string name="terms_of_use">iBODY24 이용약관</string>
    <string name="close">닫기</string>
    <string name="exer1">목 스트레칭</string>
    <string name="exer2">손목 스트레칭</string>
    <string name="exer3">팔 뒤로 허리 숙이기</string>
    <string name="exer4">옆구리 스트레칭</string>
    <string name="exer5">어깨 스트레칭1</string>
    <string name="exer6">어깨 스트레칭2</string>
    <string name="exer7">풍차 돌리기</string>
    <string name="exer8">허리 숙이기</string>
    <string name="exer9">손발 털기</string>
    <string name="exer10">팔 굽혀 펴기</string>
    <string name="exer11">제자리 높이 뛰기</string>
    <string name="exer12">스쿼트</string>
    <string name="exer13">제자리 뛰기</string>
    <string name="exer14">크런치</string>
    <string name="exer15">사이드 킥</string>
    <string name="exer16">사이드 런지</string>
    <string name="exer17">팔 벌려 뛰기</string>
    <string name="exer18">등배 운동</string>
    <string name="recommend_calorie_comment">&lt;font color="#777777"&gt;적절한 일일 칼로리 소모량은&lt;/font&gt;&lt;font color="#45c383&gt;%1$d kcal&lt;font&gt;&lt;font color="#777777"입니다.&lt;/font&gt;</string>
    <string name="four_week">4주</string>
    <string name="eight_week">8주</string>
    <string name="thisset">이번 셋트 점수는</string>
    <string name="trainer_name_3">권도예</string>
    <string name="trainer_spec_3">요가, 웨이트 트레이닝</string>
    <string name="stress_index">스트레스 지수</string>
    <string name="setting_profile">내 프로필 보기</string>
    <string name="setting_notice">공지사항 및 이벤트</string>
    <string name="setting_weight">목표 체중 설정하기</string>
    <string name="setting_device_manager">장치 관리자</string>
    <string name="setting_edit_device">기기 설정하기</string>
    <string name="setting_logout">로그아웃</string>
    <string name="empty_stress_index">당신의 스트레스 지수를 측정해보세요.</string>
    <string name="warnning_stress_index">( 측정시엔 움직이지 마세요 )</string>
    <string name="measure_start">측정 시작</string>
    <string name="name">이름</string>
    <string name="birthday">생년월일</string>
    <string name="height">신장</string>
    <string name="weight">몸무게</string>
    <string name="sex">성별</string>
    <string name="input_weight">몸무게를 입력해 주세요.</string>
</resources>