<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="184dp"
        android:orientation="vertical"
        android:gravity="center"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/coach_profile_logo"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:orientation="vertical"
        android:gravity="center"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp">

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <EditText
                android:id="@+id/setting_profile_edit_name"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColorHint="#B5B5B6"
                android:drawableTint="#EC6C2C"
                android:textSize="14dp"
                android:hint="@string/input_name"
                android:layout_marginStart="20dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp">

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/birthday" />

            <EditText
                android:id="@+id/setting_profile_edit_birth"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColorHint="#B5B5B6"
                android:drawableTint="#EC6C2C"
                android:textSize="14dp"
                android:hint="@string/input_birth"
                android:layout_marginStart="20dp"
                android:focusable="false" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp">

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/height" />

            <EditText
                android:id="@+id/setting_profile_edit_height"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColorHint="#B5B5B6"
                android:drawableTint="#EC6C2C"
                android:textSize="14dp"
                android:hint="@string/input_height"
                android:layout_marginStart="20dp"
                android:inputType="numberDecimal"
                android:focusable="false" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            >

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/weight" />

            <EditText
                android:id="@+id/setting_profile_edit_weight"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColorHint="#B5B5B6"
                android:drawableTint="#EC6C2C"
                android:textSize="14dp"
                android:hint="@string/input_weight"
                android:layout_marginStart="20dp"
                android:inputType="numberDecimal"
                android:focusable="false" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp">

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/sex" />

            <EditText
                android:id="@+id/setting_profile_edit_gender"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColorHint="#B5B5B6"
                android:drawableTint="#EC6C2C"
                android:textSize="14dp"
                android:hint="@string/input_gender"
                android:layout_marginStart="20dp"
                android:focusable="false" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="2"
        android:layout_height="60dp"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:gravity="center|center_vertical|center_horizontal"
        >

        <Button
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:background="@drawable/button_integrated"
            android:text="Next"
            style="@style/grcomm_button_large"
            android:id="@+id/setting_profile_btn_next"
            />

    </LinearLayout>

</LinearLayout>